...
                        android:gravity="center|start"
                        android:text="@string/text_view_currency_code"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/view2" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_bill_amount"
                        style="@style/TextAppearance.PayBillManager.MainTitle.Dark"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:text="0"
                        app:errorTextAppearance="@style/error_appearance"
                        app:layout_constraintBottom_toBottomOf="@+id/tv_currency_symbol"
                        app:layout_constraintEnd_toStartOf="@+id/btn_delete"
                        app:layout_constraintStart_toEndOf="@+id/tv_currency_symbol"
                        app:layout_constraintTop_toTopOf="@+id/tv_currency_symbol">


                    </androidx.appcompat.widget.AppCompatTextView>

...
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.6"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/view3">

                        <TextView
                            android:id="@+id/tv_t9_key_1"
                            style="@style/TextAppearance.PayBillManager.Keypad"
                            android:text="@string/keyboard_1"
                            app:layout_constraintBottom_toTopOf="@+id/tv_t9_key_4"
                            app:layout_constraintEnd_toStartOf="@+id/tv_t9_key_2"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toStartOf="parent"
...
                            tools:ignore="MissingPrefix,UnusedAttribute" />

                        <TextView
                            android:id="@+id/tv_t9_key_2"
                            style="@style/TextAppearance.PayBillManager.Keypad"
                            android:text="@string/keyboard_2"
                            app:layout_constraintBottom_toTopOf="@+id/tv_t9_key_5"
                            app:layout_constraintEnd_toStartOf="@+id/tv_t9_key_3"
                            app:layout_constraintStart_toEndOf="@+id/tv_t9_key_1"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:ignore="UnusedAttribute" />

                        <TextView
...
                            tools:ignore="UnusedAttribute" />

                        <TextView
                            android:id="@+id/tv_t9_key_6"
                            style="@style/TextAppearance.PayBillManager.Keypad"
                            android:text="@string/keyboard_6"
                            app:layout_constraintBottom_toTopOf="@+id/tv_t9_key_9"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/tv_t9_key_5"
                            app:layout_constraintTop_toBottomOf="@+id/tv_t9_key_3"
                            tools:ignore="UnusedAttribute" />

                        <TextView
...
