<resources>
    <string name="app_name">PayBill Manager</string>

    <!-- Toolbar Titles -->
    <string name="toolbar_upcoming_bills">Upcoming Bills</string>
    <string name="toolbar_add_bill">Add Bill</string>
    <string name="toolbar_new_bill">New Bill</string>
    <string name="toolbar_bill_details">Bill Details</string>
    <string name="toolbar_confirm_details">Confirm Details</string>

    <!-- Text-->
    <string name="text_bill_data">04</string>
    <string name="text_bill_month">JUN</string>
    <string name="text_bill_title">Safaricom PostPaid</string>
    <string name="text_bill_number">Paybill Number: 200200</string>
    <string name="text_account_number">Account Number: ZUKU213432</string>
    <string name="text_bill_amount">kes 4, 700</string>
    <string name="text_current_expenses">Current Expenses</string>
    <string name="text_amount">2,400</string>
    <string name="text_amount_placeholder">0</string>
    <string name="text_view_currency_code">Ksh</string>

    <!-- Calculator Keyboard TextViews -->
    <string name="keyboard_1">1</string>
    <string name="keyboard_2">2</string>
    <string name="keyboard_3">3</string>
    <string name="keyboard_4">4</string>
    <string name="keyboard_5">5</string>
    <string name="keyboard_6">6</string>
    <string name="keyboard_7">7</string>
    <string name="keyboard_8">8</string>
    <string name="keyboard_9">9</string>
    <string name="keyboard_decimal">.</string>
    <string name="keyboard_0">0</string>
    <string name="keyboard_clear">Clear</string>

    <string name="text_finish">Finish</string>
    <string name="text_details">Bill Details</string>
    <string name="text_reminder">Repeat (Payment recurs every month)</string>
    <string name="toolbar_title_add_bill">Add Bill</string>
    <string name="text_choose_category">Choose Category</string>

    <!-- Text Hints-->
    <string name="hint_bill_amount">Bill Amount</string>
    <string name="hint_paybill_number">PayBill Number</string>
    <string name="hint_account_number">Account Number</string>
    <string name="hint_add_a_note">Add a note</string>
    <string name="hint_amount">Amount</string>
    <string name="hint_label">Bill Name</string>

    <!-- Error Messages -->
    <string name="error_no_amount">Please enter an amount</string>
    <string name="error_no_name">Please enter PayBill name</string>
    <string name="error_no_pay_bill_number">Please enter PayBill number</string>
    <string name="error_no_account_number">Please enter Account number</string>
    <string name="error_category_not_selected">Please select a category</string>

    <!-- Placeholder Text -->
    <string name="placeholder_bill_account">Account No: %1$s</string>
    <string name="placeholder_bill_number">Paybill No: %1$s</string>
    <string name="placeholder_bill_amount">Kes: %1$s</string>
    <string name="placeholder_repeat">Remind me every %1$s of the month</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="title_activity_settings">Settings</string>


    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="text_confirm_bill_details">Confirm Bill Details</string>
    <string name="text_bill_name">Bill Name:</string>
    <string name="text_paybill">PayBill:</string>
    <string name="text_account">Account:</string>
    <string name="text_category">Category:</string>
    <string name="text_paybill_name">Zuku</string>
    <string name="text_paybill_account_number">320320</string>
    <string name="text_category_name">Internet</string>
    <string name="title_enter_account_number">Enter Account Number</string>
    <string name="title_enter_bill_number">Enter Bill Number</string>
    <string name="title_enter_bill_name">Enter Bill Name</string>
    <string name="title_select_payment_date">Select Payment Date</string>
    <string name="text_choose_date">Choose Date</string>
    <string name="text_pending">Pending</string>
    <string name="text_health">Health</string>

</resources>
