...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_calender"
            app:layout_constraintTop_toBottomOf="@+id/iv_reminder"
            tools:listitem="@layout/item_date" />

        <Button
            android:id="@+id/btn_bottom_sheet_dialog_fragment"
            android:layout_width="0dp"
            android:layout_height="58dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="@dimen/dp_8"
...
